0030672: Visualization - AIS_InteractiveContext::SetLocation() sets invalid selection BVH flag to removed object

SelectMgr_SelectionManager::Remove() now deactivates selection before removal.